.jjconflict-base-0/cynic-parser/tests/snapshots/executables__inline_fragment.snap
---
source: cynic-parser/tests/executables.rs
expression: output
---
{
  node {
    id
    ... on User {
      name
    }
  }
}
