.jjconflict-base-0/cynic-parser/tests/snapshots/executables__query_var_default_string.snap
---
source: cynic-parser/tests/executables.rs
expression: output
---
query Foo($site: String = "string") {
  field
}

