.jjconflict-base-0/cynic-parser/tests/snapshots/executables__query_vars.snap
---
source: cynic-parser/tests/executables.rs
expression: output
---
query Foo($arg: SomeType) {
  field
}

